unpackaged/main/default/objects/Agent_Reward__c/Agent_Reward__c.object-meta.xml
<CustomObject>
    <label>Agent Reward</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Agent Reward Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Rewards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>