unpackaged/main/default/objects/Agent_Reward__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Record_Type_Text__c</field>
            <operation>equals</operation>
            <value>Agent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agent Rewards</relationshipLabel>
    <relationshipName>Agent_Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>