unpackaged/main/default/objects/Agent_Reward__c/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <description>Used on email template for approval</description>
    <formula>Account__r.Owner.FirstName +&quot; &quot;+ Account__r.Owner.LastName</formula>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>