unpackaged/main/default/objects/Agent_Reward__c/fields/Agent_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Agency_Name__c</fullName>
    <description>Used on email template for approval</description>
    <formula>Account__r.Agency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent’s Agency Name</label>
    <type>Text</type>
</CustomField>