unpackaged/main/default/objects/Agent_Reward__c/fields/Agent_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Agent_Identification_Number__c</fullName>
    <description>Used on email template for approval</description>
    <formula>Account__r.CEA_Salesperson_Number__c</formula>
    <label>Agent Identification Number</label>
    <type>Text</type>
</CustomField>