unpackaged/main/default/objects/Agent_Reward__c/fields/Calculated_from__c.field-meta.xml
<CustomField>
    <fullName>Calculated_from__c</fullName>
    <label>Calculated from</label>
    <length>255</length>
    <type>Text</type>
</CustomField>