unpackaged/main/default/objects/Agent_Reward__c/fields/Current_Qtr_Published_Point__c.field-meta.xml
<CustomField>
    <fullName>Current_Qtr_Published_Point__c</fullName>
    <description>Used on email template for approval</description>
    <formula>Account__r.Reward_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Qtr Published Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>