unpackaged/main/default/objects/Agent_Reward__c/fields/Current_Qtr_Published_Tier__c.field-meta.xml
<CustomField>
    <fullName>Current_Qtr_Published_Tier__c</fullName>
    <description>Used on email template for approval</description>
    <formula>TEXT(Account__r.Reward_Tier__c)</formula>
    <label>Current Qtr Published Tier</label>
    <type>Text</type>
</CustomField>