unpackaged/main/default/objects/Agent_Reward__c/fields/Discretionary_Spending__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Spending__c</fullName>
    <label>Discretionary Spending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>