unpackaged/main/default/objects/Agent_Reward__c/fields/Email_Template_Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Approval_Type__c</fullName>
    <description>Used on email template for reward approval</description>
    <formula>IF(ISPICKVAL(Approval_Type__c, &quot;&quot;),
&quot;&quot;,
IF(ISPICKVAL(Approval_Type__c, &quot;Upgrade&quot;), TEXT(Approval_Type__c)+&quot; to&quot;, TEXT(Approval_Type__c)+&quot; from&quot;)
)</formula>
    <label>Email Template Approval Type</label>
    <type>Text</type>
</CustomField>