unpackaged/main/default/objects/Agent_Reward__c/fields/PG_Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>PG_Reward_Points__c</fullName>
    <label>PG Reward Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>