unpackaged/main/default/objects/Agent_Reward__c/fields/PGF_Loan_Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>PGF_Loan_Reward_Points__c</fullName>
    <label>PGF Loan Reward Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>