unpackaged/main/default/objects/Agent_Reward__c/fields/PGF_LoanId__c.field-meta.xml
<CustomField>
    <fullName>PGF_LoanId__c</fullName>
    <externalId>true</externalId>
    <label>PGF LoanId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>