unpackaged/main/default/objects/Agent_Reward__c/fields/Previous_Qtr_Published_Point__c.field-meta.xml
<CustomField>
    <fullName>Previous_Qtr_Published_Point__c</fullName>
    <description>Used on email template for approval</description>
    <formula>Account__r.Previous_Reward_Points__c</formula>
    <label>Previous Qtr Published Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>