unpackaged/main/default/objects/Agent_Reward__c/fields/Previous_Qtr_Published_Tier__c.field-meta.xml
<CustomField>
    <fullName>Previous_Qtr_Published_Tier__c</fullName>
    <description>Used on email template for approval</description>
    <formula>Account__r.Previous_Reward_Tier__c</formula>
    <label>Previous Qtr Published Tier</label>
    <type>Text</type>
</CustomField>