unpackaged/main/default/objects/Agent_Reward__c/fields/Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>Reward_Points__c</fullName>
    <label>Total Reward Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>