unpackaged/main/default/objects/Agent_Reward__c/fields/Reward_Tier__c.field-meta.xml
<CustomField>
    <fullName>Reward_Tier__c</fullName>
    <label>Reward Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solitaire</fullName>
            </value>
            <value>
                <fullName>Titanium</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>