unpackaged/main/default/objects/Agent_Reward__c/fields/Subscription_Spending__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Spending__c</fullName>
    <label>Subscription Spending</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>