unpackaged/main/default/objects/Agent_Reward__c/validationRules/Cannot_change_account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_account</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(Account__c)</errorConditionFormula>
    <errorMessage>Cannot change account after record is created</errorMessage>
</ValidationRule>