unpackaged/main/default/objects/Agent_Reward__c/listViews/MY_Solitarie_Approval_Agent_Reward.listView-meta.xml
<ListView>
    <fullName>MY_Solitarie_Approval_Agent_Reward</fullName>
    <filterScope>Queue</filterScope>
    <label>MY Solitarie Approval</label>
    <queue>MY_Solitarie_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>