unpackaged/main/default/objects/Agent_Reward__c/listViews/SG_Solitarie_Approval_Agent_Reward.listView-meta.xml
<ListView>
    <fullName>SG_Solitarie_Approval_Agent_Reward</fullName>
    <filterScope>Queue</filterScope>
    <label>SG Solitarie Approval</label>
    <queue>SG_Solitarie_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>