unpackaged/main/default/objects/Agent_Reward__c/listViews/Solitaire_Approvers_Agent_Reward.listView-meta.xml
<ListView>
    <fullName>Solitaire_Approvers_Agent_Reward</fullName>
    <filterScope>Queue</filterScope>
    <label>Solitaire/Black Approvers</label>
    <queue>Solitaire_Black_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>