unpackaged/main/default/objects/Agent_Reward__c/listViews/TH_Solitarie_Approval_Agent_Reward.listView-meta.xml
<ListView>
    <fullName>TH_Solitarie_Approval_Agent_Reward</fullName>
    <filterScope>Queue</filterScope>
    <label>TH Solitarie Approval</label>
    <queue>TH_Solitarie_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>